[package]
name = "evm-tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
ethers = "2.0.10"
log = "0.4"  # Please verify the latest version
env_logger = "0.10.1"
reqwest = "0.11.4"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"  # Please verify the latest version
structopt = "0.3.26"