[package]
name = "evm-tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
ethers = "2.0.10"
ethers-providers = { version = "2.0", features = ["ws"] }
eyre = "0.6.5"
futures = "0.3.29"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"  # Please verify the latest version
structopt = "0.3.26"
subxt = "0.34.0"
subxt-signer = "0.34.0"
tokio = { version = "1.34.0", features = ["full"] }
